Fix vertical alignment of emoticons.

--- a/src/scss/emoticons.scss
+++ b/src/scss/emoticons.scss
@@ -3,6 +3,8 @@
 	text-indent: -9999px;
 	width: 16px;
 	height: 16px;
+	line-height: 1em;
+	vertical-align: text-bottom;
 }
 
 .webchat-emoticon--thumbs_down {
